--- a/react_native_app/package.json
+++ b/react_native_app/package.json
@@ -14,20 +14,23 @@
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@react-navigation/stack": "^6.3.1",
     "@reduxjs/toolkit": "^1.8.5",
     "@rneui/base": "^4.0.0-rc.6",
     "@rneui/themed": "^4.0.0-rc.6",
     "expo": "~46.0.7",
+    "expo-secure-store": "~11.3.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.5",
-    "react-native-easy-grid": "^0.2.2",
+    "react-native": "0.69.6",
+    "react-native-dotenv": "^3.3.1",
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
+    "react-native-toast-message": "^2.1.5",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.2",
     "tailwindcss-react-native": "^1.7.10"
